src/styles/base/_base.scss
// -----------------------------------------------------------------------------
// This file contains very basic styles.
// -----------------------------------------------------------------------------

/**
 * Set up a decent box model on the root element
 */
html {
  box-sizing: border-box;
}

*,
*::before,
*::after {
  box-sizing: inherit;
}

$mdc-layout-grid-default-margin: (
  desktop: 0px,
  tablet: 16px,
  phone: 16px,
);

#portal-root {
  z-index: 9997;
  position: absolute;
  top: 0;
  left: 0;
}

html,
#root {
  height: 100%;
}
body {
  min-height: 100%;
  overflow-x: hidden;
}

.app-wrapper {
  min-height: 100vh;
  width: 100vw;
  font-family: "Open sans", Arial, sans-serif;

  &.home {
    background-color: $white-color;
  }
}

.content-column {
  color: $text-color;
  background-color: $light-grey;
  min-height: 100vh;
  display: flex;
  flex-flow: column;

  .top-menu-container {
    z-index: 1;
    flex: 0 1 auto;
  }
  .content {
    flex: 1 1 auto;
    padding-bottom: 2rem;
  }
}

h1,
h2,
h3 {
  font-weight: bold;
  font-family: $heading-font-stack;
}
h1 {
  font-size: 4rem;
}
h2 {
  font-size: 2.625rem;
}

// TODO: move to hero styles

.landing-hero {
  padding-top: 8rem;

  .lead {
    font-size: 1.4rem;
    width: 50%;
    margin: 2rem 0;
  }
}

.user-alert {
  margin-top: 1rem;
}

.box {
  box-shadow: 0px 4px 70px rgba(0, 0, 0, 0.05);
}

.icon {
  display: flex;
  justify-content: center;
  flex-direction: column;
}

// Dropdown
.dropdown {
  cursor: pointer;
  // Needs mixins
  user-select: none;
  &.dropdown:hover {
    .dropdown-toggle {
      color: $white-color;
    }
  }

  .dropdown-menu {
    transform: translateY(-100%);
    transition: 0.4s;
    will-change: transform;
    display: block;

    &.show {
      transform: translateY(0);
    }
  }

  .dropdown-item {
    color: $text-color;
    svg {
      margin-right: 0.5rem;
    }
  }
}

// Spinner styles
.overlay {
  width: 100vw;
  height: 100vh;
  position: absolute;
  background: rgba(0, 0, 0, 0.8);
  z-index: 9999;
}

.spinner {
  position: absolute;
  left: 50%;
  top: 50%;
  height: 60px;
  width: 60px;
  margin: 0px auto;
  -webkit-animation: rotation 0.6s infinite linear;
  -moz-animation: rotation 0.6s infinite linear;
  -o-animation: rotation 0.6s infinite linear;
  animation: rotation 0.6s infinite linear;
  border-left: 6px solid rgba(0, 174, 239, 0.15);
  border-right: 6px solid rgba(0, 174, 239, 0.15);
  border-bottom: 6px solid rgba(0, 174, 239, 0.15);
  border-top: 6px solid rgba(0, 174, 239, 0.8);
  border-radius: 100%;
}

// TODO: Add mixin
@-webkit-keyframes rotation {
  from {
    -webkit-transform: rotate(0deg);
  }
  to {
    -webkit-transform: rotate(359deg);
  }
}
@-moz-keyframes rotation {
  from {
    -moz-transform: rotate(0deg);
  }
  to {
    -moz-transform: rotate(359deg);
  }
}
@-o-keyframes rotation {
  from {
    -o-transform: rotate(0deg);
  }
  to {
    -o-transform: rotate(359deg);
  }
}
@keyframes rotation {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(359deg);
  }
}

// File upload

.file-upload input[type="file"] {
  display: none;
}

.custom-file-label.rounded-pill {
  border-radius: 50rem;
}

.custom-file-label.rounded-pill::after {
  border-radius: 0 50rem 50rem 0;
}

// TODO: make separate file for boxes

.bg-box-white {
  background-color: $white-color;
  border-radius: 20px;
  padding: 3rem;
  box-sizing: border-box;
  height: 100%;

  box-shadow: 0px 4px 70px rgba(0, 0, 0, 0.05);

  &:nth-child(2) {
    margin-left: 2.25rem;
  }

  p {
    text-align: justify;
  }

  .model-image {
    margin: 2rem 0;
  }

  .btn {
    padding-left: 2rem;
    padding-right: 2rem;
  }
}

.btn-group-center {
  text-align: center;
}

.box-scroll-wrap {
  padding-right: 1.5rem;
  height: 72vh;

  .box-scroll {
    overflow-y: scroll;
    border-radius: 20px 0 0 20px;
    height: 100%;
    padding-right: 1.5rem;
  }

  .box-scroll::-webkit-scrollbar-track {
    border-radius: 0 20px 20px 0;
    background-color: $white-color;
  }

  .box-scroll::-webkit-scrollbar {
    width: 8px;
    background-color: $light-grey;
  }

  .box-scroll::-webkit-scrollbar-thumb {
    border-radius: 10px;
    background-color: $mid-grey;
  }
}

h2.module-heading {
  margin-bottom: 2.5rem;
}

// TODO: accordion styles
.collapsible-accordion {
  .card {
    border: 0;
    border-bottom: 2px solid $mid-grey;
    border-radius: 0;
    font-size: 1.125rem;

    &:last-child {
      border: 0;
    }
  }

  .card-header {
    cursor: pointer;
    background: none;
    border: none;
    padding: 0.75rem 0.25rem;
    font-weight: bold;

    .arrow {
      float: right;
      border-width: 0 3px 3px 0;
    }
  }

  .show {
    .arrow {
      transform: rotate(-135deg) translate(-7px, -7px);
    }
  }

  .card-body {
    padding: 0 0.25rem 1.5rem;
  }
}

.module-nav {
  background-color: $green-color;
  box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.1);
  border-radius: 80px;
  padding: 0.5rem;
  margin-bottom: 1.5rem;

  .nav-link {
    padding: 0.6rem 2.5rem;
    border-radius: 80px;
    color: $white-color;

    &.active {
      background: $white-color;
      color: $text-color;
      box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.15);
      font-weight: 700;
    }
  }
}

// TODO: make separate file for utils
.arrow {
  border: solid;

  border-color: $secondary-color;

  border-width: 0 2px 2px 0;
  display: inline-block;
  padding: 0.4rem;

  &.right {
    transform: rotate(-45deg);
    -webkit-transform: rotate(-45deg);
  }

  &.left {
    transform: rotate(135deg);
    -webkit-transform: rotate(135deg);
  }

  &.up {
    transform: rotate(-135deg);
    -webkit-transform: rotate(-135deg);
  }

  &.down {
    transform: rotate(45deg);
    -webkit-transform: rotate(45deg);
  }
}

.noselect {
  -webkit-touch-callout: none;
  -webkit-user-select: none;
  -khtml-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.menu-panel {
  border-radius: 5rem;
  background-color: $green-color;
  padding: 0.5rem;
  .navbar-item {
    border-radius: 5rem;
    padding: 0.5rem 2rem;
    color: $white-color;
    transition: 200ms;
    margin-right: 1rem;

    &:hover,
    &.active {
      text-decoration: none;
      color: $text-color;
      font-weight: bold;
      box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.15);
      background-color: $white-color;
    }
  }
}

.bc-section {
  margin-bottom: -20px;
}

.loader-wrapper {
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  width: 100%;
  background: #fff;
  opacity: 0;
  z-index: -1;
  transition: opacity 0.3s;
  display: flex;
  justify-content: center;
  align-items: center;
  border-radius: 6px;

  .loader {
    height: 80px;
    width: 80px;
  }

  &.is-active {
    opacity: 1;
    z-index: 1;
  }
}

